# trade-data

./: .gitignore
data_generator/: deploy.sh  pyproject.toml
data_generator/src/data_generator/: cli.py  config.py  config.yaml  core.py
data_generator/src/data_generator/db_helpers/: __init__.py  baci_import.py  init_db.py  models.py
data_generator/src/data_generator/db_helpers/calculations/: betweenness_centrality.py  country_product_yearly_value.py  market_concentration.py
data_generator/src/data_generator/json_exporters/: betweenness_centrality_per_country.py  betweenness_centrality_per_year.py  countries_and_products.py  country_product_value_all_years.py  market_concentrations.py  market_sizes_per_year.py  product_trades.py  product_trades_per_year.py  trade_balances_per_country.py
